--- a/main.html
+++ b/main.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spill</title>
+    <title>Biljard</title>
 </head>
 <body>
 
-    
+    <h1>Biljard</h1>
 
+    <!-- <img src="table.jpg"/> -->
+    <canvas id="gameCanvas" width="1000" height="600">
+        This browser doesnt support canvas technology, try another or update
+    </canvas>
+
+    <script src="main.js"></script>
 </body>
 </html>
