Rename to index

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         This browser doesnt support canvas technology, try another or update
     </canvas>
 
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
