--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-    <h1>Biljard</h1>
+    <!-- <h1>Biljard</h1> -->
 
     <div id="canvasContainer">
-        <canvas id="gameCanvas" onmousemove="onMouse(event)" width="1000" height="800">
+        <canvas id="gameCanvas" onmousemove="onMouse(event)" width="1000" height="700">
             This browser doesnt support canvas technology, try another or update
         </canvas>
     </div>
