--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
 
-    <!-- <h1>Biljard</h1> -->
+
+    <div id="introScreen">
+        <h1>Biljard</h1>
+
+        <button onclick="startGame()">Kjøøørrr</button>
+    </div>
 
     <div id="canvasContainer">
         <canvas id="gameCanvas" onmousemove="onMouse(event)" width="1000" height="700">
