--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <div id="introScreen">
         <h1>Biljard</h1>
 
-        <button onclick="startGame()">Kjøøørrr</button>
+        <button onclick="startGame()">
+            <img src="/playgame.jpg"/>
+        </button>
     </div>
 
-    <div id="canvasContainer">
+    <div id="canvasContainer" class="invisible">
         <canvas id="gameCanvas" onmousemove="onMouse(event)" width="1000" height="700">
             This browser doesnt support canvas technology, try another or update
         </canvas>
